--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -1,3 +1,37 @@
 /**
  * Place your custom CSS styles here.
  **/
+
+ .blue {
+    background-color: #0099ff;
+    color: white;
+  }
+
+  .green {
+    background-color: #33cc33;
+    color: white;
+
+  }
+
+  .yellow {
+    background-color:yellow;
+    color: black;
+  }
+
+  .red {
+    background-color: red;
+    color: black;
+  }
+
+  .pink {
+    background-color: pink;
+    color: black;
+  }
+
+.blueGradient {
+    color: white;
+
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+
+}
